<?xml version="1.0"?>
<package format="2">
  <name>pose_utils</name>
  <version>0.0.0</version>
  <description>
    Pose Utils
  </description>

  <author>Antonio Loquercio</author>
  <maintainer email="loquercio@ifi.uzh.ch">Antonio Loquercio</maintainer>
  <license>public</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr</depend>
</package>
